--- a/crds/kubernetes.vultr.kubeform.com_kubernetes.yaml
+++ b/crds/kubernetes.vultr.kubeform.com_kubernetes.yaml
@@ -5,14 +5,14 @@ metadata:
   labels:
     app.kubernetes.io/name: vultr.kubeform.com
     app.kubernetes.io/part-of: kubeform.com
-  name: metalservers.bare.vultr.kubeform.com
+  name: kubernetes.kubernetes.vultr.kubeform.com
 spec:
-  group: bare.vultr.kubeform.com
+  group: kubernetes.vultr.kubeform.com
   names:
-    kind: MetalServer
-    listKind: MetalServerList
-    plural: metalservers
-    singular: metalserver
+    kind: Kubernetes
+    listKind: KubernetesList
+    plural: kubernetes
+    singular: kubernetes
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -57,154 +57,137 @@ spec:
                 type: object
               resource:
                 properties:
-                  activationEmail:
-                    type: boolean
-                  appID:
-                    format: int64
-                    type: integer
-                  cpuCount:
-                    format: int64
-                    type: integer
+                  clusterSubnet:
+                    type: string
                   dateCreated:
                     type: string
-                  disk:
-                    type: string
-                  enableIpv6:
-                    type: boolean
-                  gatewayV4:
-                    type: string
-                  hostname:
+                  endpoint:
                     type: string
                   id:
                     type: string
-                  imageID:
+                  ip:
+                    type: string
+                  kubeConfig:
                     type: string
                   label:
                     type: string
-                  macAddress:
-                    format: int64
-                    type: integer
-                  mainIP:
-                    type: string
-                  netmaskV4:
-                    type: string
-                  os:
-                    type: string
-                  osID:
-                    format: int64
-                    type: integer
-                  plan:
-                    type: string
-                  ram:
-                    type: string
+                  nodePools:
+                    properties:
+                      ID:
+                        type: string
+                      dateCreated:
+                        type: string
+                      dateUpdated:
+                        type: string
+                      label:
+                        type: string
+                      nodeQuantity:
+                        format: int64
+                        type: integer
+                      nodes:
+                        items:
+                          properties:
+                            ID:
+                              type: string
+                            dateCreated:
+                              type: string
+                            label:
+                              type: string
+                            status:
+                              type: string
+                          type: object
+                        type: array
+                      plan:
+                        type: string
+                      status:
+                        type: string
+                      tag:
+                        type: string
+                    required:
+                    - label
+                    - nodeQuantity
+                    - plan
+                    type: object
                   region:
                     type: string
-                  reservedIpv4:
+                  serviceSubnet:
                     type: string
-                  scriptID:
-                    type: string
-                  snapshotID:
-                    type: string
-                  sshKeyIDS:
-                    items:
-                      type: string
-                    type: array
                   status:
                     type: string
-                  tag:
+                  version:
                     type: string
-                  userData:
-                    type: string
-                  v6MainIP:
-                    type: string
-                  v6Network:
-                    type: string
-                  v6NetworkSize:
-                    format: int64
-                    type: integer
                 required:
-                - plan
+                - label
+                - nodePools
                 - region
-                type: object
-              secretRef:
-                description: LocalObjectReference contains enough information to let
-                  you locate the referenced object inside the same namespace.
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                      TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
+                - version
                 type: object
               state:
                 properties:
-                  activationEmail:
-                    type: boolean
-                  appID:
-                    format: int64
-                    type: integer
-                  cpuCount:
-                    format: int64
-                    type: integer
+                  clusterSubnet:
+                    type: string
                   dateCreated:
                     type: string
-                  disk:
-                    type: string
-                  enableIpv6:
-                    type: boolean
-                  gatewayV4:
-                    type: string
-                  hostname:
+                  endpoint:
                     type: string
                   id:
                     type: string
-                  imageID:
+                  ip:
+                    type: string
+                  kubeConfig:
                     type: string
                   label:
                     type: string
-                  macAddress:
-                    format: int64
-                    type: integer
-                  mainIP:
-                    type: string
-                  netmaskV4:
-                    type: string
-                  os:
-                    type: string
-                  osID:
-                    format: int64
-                    type: integer
-                  plan:
-                    type: string
-                  ram:
-                    type: string
+                  nodePools:
+                    properties:
+                      ID:
+                        type: string
+                      dateCreated:
+                        type: string
+                      dateUpdated:
+                        type: string
+                      label:
+                        type: string
+                      nodeQuantity:
+                        format: int64
+                        type: integer
+                      nodes:
+                        items:
+                          properties:
+                            ID:
+                              type: string
+                            dateCreated:
+                              type: string
+                            label:
+                              type: string
+                            status:
+                              type: string
+                          type: object
+                        type: array
+                      plan:
+                        type: string
+                      status:
+                        type: string
+                      tag:
+                        type: string
+                    required:
+                    - label
+                    - nodeQuantity
+                    - plan
+                    type: object
                   region:
                     type: string
-                  reservedIpv4:
+                  serviceSubnet:
                     type: string
-                  scriptID:
-                    type: string
-                  snapshotID:
-                    type: string
-                  sshKeyIDS:
-                    items:
-                      type: string
-                    type: array
                   status:
                     type: string
-                  tag:
+                  version:
                     type: string
-                  userData:
-                    type: string
-                  v6MainIP:
-                    type: string
-                  v6Network:
-                    type: string
-                  v6NetworkSize:
-                    format: int64
-                    type: integer
                 required:
-                - plan
+                - label
+                - nodePools
                 - region
+                - version
                 type: object
               terminationPolicy:
                 enum:
